--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -6,10 +6,14 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link id="theme-css" rel="stylesheet">
+    <link
+      href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css"
+      rel="stylesheet"
+    />
+    <link id="theme-css" rel="stylesheet" />
   </head>
 
   <body>
-  <app-root></app-root>
+    <app-root></app-root>
   </body>
 </html>
